Update #13 Business Metrics.ipynb

--- a/#13 Business Metrics.ipynb
+++ b/#13 Business Metrics.ipynb
@@ -2269,9 +2269,9 @@
     "\n",
     "A few actions that you could take to reactivate these customers are:\n",
     "\n",
-    "Make a new promotion specifically for the quitters.\n",
-    "Make a new promotion specifically for the customers who attended the gym up until the end.\n",
-    "Throw in some perks in addition to the standard service for the customers who didn't quit.\n",
+    "- Make a new promotion specifically for the quitters.\n",
+    "- Make a new promotion specifically for the customers who attended the gym up until the end.\n",
+    "- Throw in some perks in addition to the standard service for the customers who didn't quit.\n",
     "As for the monthly plan churned customers, you think back to recent changes in the service to try to figure out why they quit. Nothing comes to mind, you have no idea.\n",
     "\n",
     "You decide to reach out to these customers and offer them a one-day pass for the gym in exchange for their feedback. Hopefully you can get some insights and act on them.\n",
