--- a/#13 Business Metrics.ipynb
+++ b/#13 Business Metrics.ipynb
@@ -2274,9 +2274,7 @@
     "- Throw in some perks in addition to the standard service for the customers who didn't quit.\n",
     "As for the monthly plan churned customers, you think back to recent changes in the service to try to figure out why they quit. Nothing comes to mind, you have no idea.\n",
     "\n",
-    "You decide to reach out to these customers and offer them a one-day pass for the gym in exchange for their feedback. Hopefully you can get some insights and act on them.\n",
-    "\n",
-    "Overall, you've been doing a good job of keeping your customers. In addition to being a fit creative genius, you also are an entrepreneur — life isn't fair."
+    "You decide to reach out to these customers and offer them a one-day pass for the gym in exchange for their feedback. Hopefully you can get some insights and act on them.\n"
    ]
   }
  ],
