Update #8 Analyzing NYC High School Data (end-to-end data analytics project).ipynb

--- a/#8 Analyzing NYC High School Data (end-to-end data analytics project).ipynb
+++ b/#8 Analyzing NYC High School Data (end-to-end data analytics project).ipynb
@@ -3089,23 +3089,24 @@
     "## CONCLUSION\n",
     "\n",
     "After investigating into correlations among different factors that can possibly affect the SAT scores, we can jump to conclusion as following:\n",
-    "1. Geographic and SAT score:\n",
+    "\n",
+    "### Geographic and SAT score:\n",
     "\n",
     "We see that school density is highest in Manhattan, and lower in Brooklyn, the Bronx, Queens and Staten Island. At first, we believed that higher enrollments to schools lead to higher SAT scores, however, it is actually the percentage of English leaners that attributes to the total enrollments. Nevertheless, upper Manhattan and parts of the Bronx and Queens tend to have higher percentages of English learning students. \n",
     "\n",
-    "2. Race and SAT score\n",
+    "### Race and SAT score\n",
     "\n",
     "There is quite strong correlation between races and SAT scores. Asian and white students perform quite good with high SAT scores, whereas schools that have high percentage of black or hispanic students tend to have lower performance on SAT scores. This could be due to the lack of funding, students are still learning English and not yet fully prepared for SAT exams. \n",
     "\n",
-    "3. Gender and SAT score\n",
+    "### Gender and SAT score\n",
     "\n",
     "Even though there is a correlation between genders and SAT scores, however, it is not that strong to have a huge influence on SAT scores. The statistics show that while schools that have high percentage of female students can have a higher SAT scores, schools with more male students tend to score lower. But it is not that necessarily true as the schools that have higher female percentage tend to be very selective schools and this could affect the scoring also. \n",
     "\n",
-    "4. AP test takers and SAT score\n",
+    "### AP test takers and SAT score\n",
     "\n",
     "There is also a correlation, and again, it is not that strong to have a huge influence on SAT scores. \n",
     "\n",
-    "5. Safety and SAT score\n",
+    "### Safety and SAT score\n",
     "\n",
     "There is quite a correlation between these 2 sections. And schools with quite low safety scores tend to score lower on SAT. "
    ]
