--- a/#9 Star Wars Survey .ipynb
+++ b/#9 Star Wars Survey .ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# Star Wars Survey\n",
     "\n",
-    "The project answered the question: \"Does the rest of America realize that \"The Empire Strikes Back\" is clearly the best of the bunch?\". Star Wars fans were surveyed using the online tool SurveyMonkey. There were 835 total responses, which can be found [here](https://github.com/fivethirtyeight/data/tree/master/star-wars-survey).\n",
+    "Here comes the question: \"Does the rest of America realize that \"The Empire Strikes Back\" is clearly the best of the bunch?\". Star Wars fans were surveyed using the online tool SurveyMonkey. There were 835 total responses, which can be found [here](https://github.com/fivethirtyeight/data/tree/master/star-wars-survey).\n",
     "\n",
-    "For this project, we would be cleaning and exploring the data set to answer the aforementioned question."
+    "For this project, we would be cleaning and exploring the data set to at least comprehend the trend that can somewhat reveal a bit of the answer for the aforementioned question."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "[10 rows x 38 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1445,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
        "<BarContainer object of 6 artists>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1512,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,7 @@
        "<BarContainer object of 6 artists>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -1656,7 +1656,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generally, the trends in ranking and view counts for both genders are relatively the same, where episode 1-3 are less favoured and ranked lower than episode 4-6. Additionally, it looks like men watched more Star Wars movies than women did but they liked them far less then females did."
+    "Generally, the trends in ranking and view counts for both genders are relatively the same, where episode 1-3 are less favoured and ranked lower than episode 4-6. Additionally, it looks like men watched more Star Wars movies than women did but they liked them far less then females did.\n",
+    "\n",
+    "If the trend continues being like this, it is less likely that the new movie would be the best out of whole franchises."
    ]
   }
  ],
